--- a/portfolio.html
+++ b/portfolio.html
@@ -845,4 +845,4 @@
     document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
   </script>
 </body>
-</html>
+</html>"<footer>Copyright 2026</footer>" 
